php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #32063 mb_convert_encoding ignores named entity 'alpha'
Submitted: 2005-02-22 10:37 UTC Modified: 2005-02-22 11:10 UTC
From: webmaster at reddi dot de Assigned:
Status: Closed Package: mbstring related
PHP Version: 5.0.3 OS: linux
Private report: No CVE-ID: None
 [2005-02-22 10:37 UTC] webmaster at reddi dot de
Description:
------------
if to_encoding is UTF-8
and from_encoding is HTML-ENTITIES,
mb_convert_encoding leaves named entity 'alpha' unconverted.

This is pesky!




Reproduce code:
---------------
<?php
  $a= '&Alpha;&Beta;&alpha;&beta;' ;
  echo mb_convert_encoding ($a, 'utf-8', 'HTML-ENTITIES');
?>


Expected result:
----------------
ΑΒαβ

Actual result:
--------------
ΑΒ&alpha;β

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-02-22 11:10 UTC] moriyoshi@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC