- MFH: fix bug #32063 (mb_convert_encoding() ignores named entity 'alpha')